--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "gatsby": "^1.9.145",
     "gatsby-link": "^1.6.32",
     "gatsby-plugin-react-helmet": "^1.0.8",
-    "gatsby-plugin-sass": "^1.0.15"
+    "gatsby-plugin-sass": "^1.0.15",
+    "react-flexbox-grid": "^2.0.0"
   },
   "keywords": [
     "gatsby"
