--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "1.0.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "chartist": "^0.11.0",
+    "chartist-plugin-targetline": "^1.0.1",
+    "chartist-plugin-threshold": "^0.0.2",
     "eslint": "^4.14.0",
     "gatsby": "^1.9.145",
     "gatsby-link": "^1.6.32",
