--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "gatsby-plugin-react-helmet": "^1.0.8",
     "gatsby-plugin-sass": "^1.0.15",
     "plyr": "^2.0.18",
-    "react-flexbox-grid": "^2.0.0"
+    "react-flexbox-grid": "^2.0.0",
+    "smoothscroll-polyfill": "^0.4.0"
   },
   "keywords": [
     "gatsby"
