Set caching headers.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eslint": "^4.14.0",
     "gatsby": "^1.9.145",
     "gatsby-link": "^1.6.32",
+    "gatsby-plugin-netlify": "^1.0.12",
     "gatsby-plugin-react-helmet": "^1.0.8",
     "gatsby-plugin-sass": "^1.0.15",
     "plyr": "^2.0.18",
