--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-plugin-sass": "^1.0.15",
     "plyr": "^2.0.18",
     "react-flexbox-grid": "^2.0.0",
+    "scrolltrigger-classes": "^0.3.6",
     "smoothscroll-polyfill": "^0.4.0",
     "typeface-questrial": "^0.0.44",
     "typeface-quicksand": "^0.0.44"
