--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^1.9.2"
+    "prettier": "^1.9.2",
+    "url-loader": "^0.6.2"
   }
 }
