--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "gatsby-plugin-sharp": "^1.6.48",
     "gatsby-source-filesystem": "^1.5.39",
     "gatsby-transformer-sharp": "^1.6.27",
-    "plyr": "^2.0.18",
+    "plyr": "^3.5.6",
     "react-flexbox-grid": "^2.0.0",
     "scrolltrigger-classes": "^0.3.6",
     "smoothscroll-polyfill": "^0.4.4"
@@ -36,6 +36,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "file-loader": "^4.1.0",
     "prettier": "^1.17.1",
     "url-loader": "^0.6.2"
   }
